# octnet

./: .gitignore  LICENSE  README.md  build_all.sh  build_cpu.sh
cmake/: FindOctNetCore.cmake  FindOctNetGeometry.cmake
core/: CMakeLists.txt
core/include/octnet/core/: conv3x3x3.h  core.h  dense.h  pool.h  types.h  z_curve.h
core/include/octnet/cpu/: activations.h  buffer.h  combine.h  conv.h  cpu.h  dense.h  io.h  loss.h  math.h  misc.h  pool.h  split.h  unpool.h  volumetric_upsampling.h
core/include/octnet/test/: objects.h
core/src/: activations.cpp  combine.cpp  concat.cpp  conv.cpp  core.cpp  d2o.cpp  gridpool.cpp  gridunpool.cpp  io.cpp  loss.cpp  math.cpp  misc.cpp  o2d.cpp  pool.cpp  split.cpp  volumetric_upsampling.cpp
core/test/: test_octree.cpp
core_gpu/: CMakeLists.txt
core_gpu/include/octnet/gpu/: activations.h  buffer.h  col2oc.h  combine.h  common.h  conv.h  dense.h  gpu.h  loss.h  math.h  misc.h  oc2col.h  pool.h  split.h  unpool.h  volumetric_upsampling.h
core_gpu/src/: activations.cu  col2oc.cu  combine.cu  concat.cu  conv.cu  conv_mm.cu  core.cu  d2o.cu  gridpool.cu  gridunpool.cu  loss.cu  math.cu  misc.cu  o2d.cu  oc2col.cu  pool.cu  split.cu  volumetric_upsampling.cu
core_gpu/test/: test_conv_mm.cu  test_data_idx_speed.cu  test_data_idx_to_bit_idx_speed.cu  test_leaf_idx_to_grid_idx.cu  test_n_leafs_speed.cu
create/: CMakeLists.txt
create/include/octnet/create/: create.h  create_from_mesh.h  utils.h
create/src/: create.cpp  create_dense.cpp  create_mesh.cpp  create_obj.cpp  create_off.cpp  create_pc.cpp  utils.cpp
create/test/: test_create.cpp
example/: common.lua
example/00_create_data/: create_data.py  vis.py
example/01_classification_modelnet/: .gitignore  README.md  classification_common.lua  create_data.py  dataloader.lua  train_mn10_r64.lua
geometry/include/octnet/geometry/: geometry.h  geometry_cpu.h
geometry/src/: geometry.cpp
py/: pyoctnet.pyx  setup.py
py/old/: misc.py  plot3d.py  pygeometry_cpu.pyx  setup_gpu.py
th/cpu/: CMakeLists.txt
th/cpu/include/octnet/torch/: cpu.h
th/cpu/src/: cpu.cpp
th/gpu/: CMakeLists.txt
th/gpu/include/octnet/torch/: gpu.h
th/gpu/src/: gpu.cu
th/oc/: CDHWToOctree.lua  OctreeBCECriterion.lua  OctreeClassNLLCriterion.lua  OctreeConcat.lua  OctreeConvolution3x3x3.lua  OctreeConvolutionMM.lua  OctreeCriterion.lua  OctreeCrossEntropyCriterion.lua  OctreeDenseConvolution.lua  OctreeDummyCriterion.lua  OctreeGridPool2x2x2.lua  OctreeGridUnpool2x2x2.lua  OctreeGridUnpoolGuided2x2x2.lua  OctreeLogSoftMax.lua  OctreeMSECriterion.lua  OctreeMaskedBCECriterion.lua  OctreeModule.lua  OctreePool2x2x2.lua  OctreeReLU.lua  OctreeSigmoid.lua  OctreeSplit.lua  OctreeSplitCriterion.lua  OctreeToCDHW.lua  VolumetricNNUpsampling.lua  ffi.lua  init.lua  octree.lua  test_cpu.lua  test_gpu.lua  test_utils.lua
th/oc/test_octrees/: chair_128.oc  chair_256.oc  chair_32.oc  chair_64.oc  table_128.oc  table_256.oc  table_32.oc  table_64.oc
